--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "async": "^3.2.0",
     "bytebuffer": "^5.0.1",
     "grpc": "^1.24.10",
-    "lodash": "^4.17.21",
-    "socket.io": "^4.1.2"
+    "lodash": "^4.17.21"
   }
 }
